--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/logo.png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>flockey</title>
+    <title>Connecto</title>
 
     <!-- googole fonts here ... -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
